--- a/frontend/src/app/features/board-page/components/ticket-detailed-view/ticket-detailed-view.component.scss
+++ b/frontend/src/app/features/board-page/components/ticket-detailed-view/ticket-detailed-view.component.scss
@@ -8,7 +8,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1003;
+  z-index: 994;
   display : flex;
   justify-content: center;
   align-items: start;
@@ -250,7 +250,7 @@ $text-field-offset : 0.3rem;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 2500;
+  z-index: 995;
   display: flex;
   align-items: center;
   justify-content: center;
